style: fixed alignment

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
 }
 
 body {
-  background-image: url("https://images.pexels.com/photos/4101555/pexels-photo-4101555.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-  /* background-image: url("https://images.pexels.com/photos/2923595/pexels-photo-2923595.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"); */
+  /* background-image: url("https://images.pexels.com/photos/4101555/pexels-photo-4101555.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"); */
+  background-image: url("https://images.pexels.com/photos/2923595/pexels-photo-2923595.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -48,7 +48,7 @@ body {
 
 .single_info {
   flex-direction: column;
-  align-items: center;
+  text-align: center;
   padding: 0 0.5rem;
 }
 
@@ -93,8 +93,8 @@ body {
 .todo_box {
   flex-direction: column;
   gap: 1rem;
-  background-color: rgba(13, 59, 124, 0.568);
-  /* background-color: rgba(143, 143, 143, 0.567); */
+  /* background-color: rgba(13, 59, 124, 0.568); */
+  background-color: rgba(143, 143, 143, 0.567);
   width: 25%;
   padding: 1rem;
   position: absolute;
